[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/purchaseicon.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/ShopItem.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/speedicon.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/TextBlock.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 11 )

[node name="ShopItem" type="Node2D"]
script = ExtResource( 2 )

[node name="PurchaseIndicator" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Logo" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 13.0
margin_right = 42.0
margin_bottom = 53.0
texture = ExtResource( 3 )

[node name="CostText" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 29 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 24 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
